class Message {
  String messageContent;
  String messageType;
  Message({required this.messageContent, required this.messageType});
}
